# png-reader

./: .gitignore  CMakeLists.txt  EncryptionDecryptionPython.py  README.md  RSAKeysGenerator.py  chunkreader.cpp  ff2.py  headers.cpp
buffer/: IDATBytes  IDATBytesDecryptedCBCDecompressed  IDATBytesEncryptedCBCCompressed  IDATBytesEncryptedCBCDecompressed  IDATBytesEncryptedECBCompressed  IDATBytesEncryptedECBDecompressed
inc/: ChunkFactory.hh  ChunkReader.hh  ChunkWriter.hh  OnBytesOperations.hh  headers.hh
inc/Chunks/: Chunk.hh
inc/Chunks/AncillaryChunks/: pHYsChunk.hh  sBITChunk.hh  tEXtChunk.hh
inc/Chunks/CriticalChunks/: IDATChunk.hh  IENDChunk.hh  IHDRChunk.hh  PLTEChunk.hh
inc/EncryptionDecryption/: CBC.hh  ChunkDataAdapter.hh  ECB.hh  EncryptionDecryptionManager.hh  FileEncryptionDecryptionInterface.hh
inc/EncryptionDecryption/RSA/: fileEncryptorDecryptor.hh
inc/RSA/: fileEncryptorDecryptor.hh  keysGenerator.hh
keys/: private.pem  private.txt  public.pem  public.txt
src/: ChunkFactory.cpp  ChunkReader.cpp  ChunkWriter.cpp  OnBytesOperations.cpp  main.cpp
src/Chunks/: Chunk.cpp
src/Chunks/AncillaryChunks/: pHYsChunk.cpp  sBITChunk.cpp  tEXtChunk.cpp
src/Chunks/CriticalChunks/: IDATChunk.cpp  IENDChunk.cpp  IHDRChunk.cpp  PLTEChunk.cpp
src/EncryptionDecryption/: CBC.cpp  ChunkDataAdapter.cpp  ECB.cpp  EncryptionDecryptionManager.cpp  keysGenerator.cpp
src/EncryptionDecryption/RSA/: fileEncryptorDecryptor.cpp
src/RSA/: ChunkDataAdapter.cpp  fileEncryptorDecryptor.cpp  keysGenerator.cpp
