cmake_minimum_required(VERSION 3.0)
set(CMAKE_CXX_COMPILER "C:/Program Files/MinGW/bin/g++.exe")
set(CMAKE_C_COMPILER "C:/Program Files/MinGW/bin/gcc.exe")
PROJECT(PngReader)
include_directories(inc)
set(OPENSSL_ROOT_DIR "C:/Program Files/OpenSSL-Win64")
find_package(OpenSSL REQUIRED)
file(GLOB SOURCE "src/*.cpp" "src/RSA/*.cpp" "src/Chunks/*.cpp" "src/Chunks/AncillaryChunks/*.cpp" "src/Chunks/CriticalChunks/*.cpp"
"inc/*.hh" "inc/RSA/*.hh" "inc/Chunks/*.hh" "inc/Chunks/AncillaryChunks/*.hh" "inc/Chunks/CriticalChunks/*.hh")
add_executable(${PROJECT_NAME} ${SOURCE} applink.o)
target_include_directories(PngReader PUBLIC ${OPENSSL_INCLUDE_DIR})
target_link_libraries(PngReader PUBLIC OpenSSL::SSL OpenSSL::Crypto)
target_compile_features(PngReader PRIVATE cxx_std_17)
set(CMAKE_BUILD_TYPE Debug)
add_compile_options(-Wall -Wextra -pedantic -Werror -std=gnu++17)